# FlashNotes

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: lint_backend.yml  lint_frontend.yml  test_backend.yml
backend/: .env  .env.example  .gitignore  Dockerfile  Dockerfile.pip  docker-compose.test.yml  entrypoint.sh  prestart.sh  pyproject.toml  tests-start.sh
backend/src/: __init__.py  backend_pre_start.py  main.py  routers.py
backend/src/ai_models/gemini/: __init__.py  config.py  exceptions.py  provider.py
backend/src/alembic/versions/: 3dd0d42d6792_.py  4baa12ccff54_.py  4efa50e00bd4_add_indexes_to_foreign_keys_and_.py  68900486b18c_add_practice_session_tables.py  a4ee77cd028b_practice_sessions.py  b4ecf0537706_set_card_front_and_back_fields_to_3000_.py  c8f918b058c6_.py  cb16ae472c1e_.py  cb7e65c8085b_add_user_cascade_delete_relationships.py
backend/src/auth/: api.py  services.py
backend/src/core/: config.py  db.py
backend/src/flashcards/: ai_config.py  api.py  exceptions.py  models.py  schemas.py  services.py
backend/src/stats/: api.py  schemas.py  services.py
backend/src/users/: api.py  models.py  schemas.py  services.py
backend/tests/: conftest.py
backend/tests/auth/: test_api.py  test_services.py
backend/tests/flashcards/: conftest.py  test_card_api.py  test_cascade_delete.py  test_collection_api.py  test_services.py
backend/tests/flashcards/card/: test_api.py  test_services.py
backend/tests/flashcards/collection/: test_api.py  test_services.py
backend/tests/flashcards/practice_session/: test_api.py  test_services.py
backend/tests/scripts/: test_test_pre_start.py
backend/tests/stats/: test_api.py  test_services.py  utils.py
backend/tests/users/: test_api.py  test_services.py
backend/tests/utils/: user.py  utils.py
docs/: how-to-run-github-action-locally.md
frontend/: .env.example  .gitignore  biome.json  db.json  index.html  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  routes.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: main.jsx  main.tsx  routeTree.gen.ts  theme.jsx  theme.tsx  utils.ts
frontend/src/assets/: contributors.json  stars.json
frontend/src/client/: client.gen.ts  models.ts  schemas.ts  sdk.gen.ts  services.ts  types.gen.ts
frontend/src/config/: api.js  api.ts
frontend/src/db/: flashcardsDB.ts
frontend/src/hooks/: useApiPracticeSession.ts  useAuth.ts  useAuthContext.tsx  useCard.ts  useCardEditor.ts  useCards.ts  useCollections.js  useCollectionsQuery.ts  useDebounce.js  useDebounce.ts  usePracticeSession.js  usePracticeSession.ts  useTextCounter.tsx
frontend/src/i18n/: index.tsx
frontend/src/routes/: __root.jsx  __root.tsx  _layout.tsx  _publicLayout.tsx  index.jsx  index.tsx  login.tsx  signup.tsx
frontend/src/services/: cards.ts  cardsService.js  collections.ts  collectionsService.ts  practiceSessions.ts  stats.ts
frontend/src/utils/: authUtils.ts  stats.ts  text.ts  (+1 more)
scripts/: generate_client.sh
(+107 files in other folders)
